--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,23 @@
   font-size: 14px;
   font-weight: 300;
 }
+
+@media (max-width: 760px) {
+  .news--one--list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+  }
+
+  .news--one--item {
+    display: grid;
+    grid-template-columns: 120px 1fr;
+    grid-gap: 1rem;
+    height: 120px;
+  }
+
+  .news--one--item__header img {
+    width: 100%;
+    height: 120px;
+  }
+}
