add News Type Three and support reposonsive design for both desktop table and phone

--- a/css/ads.css
+++ b/css/ads.css
@@ -2,10 +2,9 @@
   display: block;
   width: 100%;
   text-align: center;
-  /* padding: 3rem; */
 }
 
 .main--ads-one img {
   height: 300px;
-  margin: 2rem;
+  margin: 4rem 1rem;
 }
