--- a/css/news-one.css
+++ b/css/news-one.css
@@ -1,8 +1,6 @@
-
-
 .news--one--list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 1rem;
   margin-top: 1.72rem;
 }
@@ -14,7 +12,7 @@
 
 .news--one--item__header {
   width: 100%;
-  height: 180px;
+  height: 240px;
 }
 
 .news--one--item__header img {
@@ -24,6 +22,7 @@
 
 .news--one--item__body {
   display: block;
+  margin-top: 0.6rem;
 }
 
 .news--one--item__body h3 {
@@ -37,6 +36,20 @@
   color: grey;
   font-size: 14px;
   font-weight: 300;
+}
+
+.news--one--item__body span {
+  display: inline;
+  font-size: 14px;
+  font-weight: 300;
+  text-decoration: line-through;
+  margin-right: 0.5rem;
+}
+
+.news--one--item__body strong {
+  display: inline;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 @media (max-width: 760px) {
