--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import "./top-article.css";
 @import "./ads.css";
 @import "./news-one.css";
+@import "./news-two.css";
 @import "./news-three.css";
 @import "./footer.css";
 
@@ -66,4 +67,5 @@ a {
   font-size: 24px;
   font-weight: 900;
   color: red;
+  display: inline-block;
 }
