--- a/css/news-two.css
+++ b/css/news-two.css
@@ -4,6 +4,11 @@
   padding: 2rem 0;
 }
 
+.news--two--item ul li {
+  padding: 0.6rem;
+  display: block;
+}
+
 .news--two ul {
   display: inline-block;
 }
@@ -52,7 +57,7 @@
   background: red;
   display: block;
   color: white;
-  padding: 0.6rem 0rem 0.4rem 7rem;
+  padding: 0.6rem 0 0.4rem 7rem;
   text-align: left;
   font-size: 18px;
   font-weight: 500;
@@ -61,12 +66,7 @@
 .news--two--item .subtitle {
   background-color: azure;
   color: grey;
-  padding: 0.6rem 0rem 0.4rem 7rem;
-  display: block;
-}
-
-.news--two--item ul li {
-  padding: 0.6rem;
+  padding: 0.6rem 0 0.4rem 7rem;
   display: block;
 }
 
