--- a/css/top-article.css
+++ b/css/top-article.css
@@ -6,7 +6,7 @@ main {
 
 .main--article--list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-gap: 0.6rem;
   height: 540px;
 }
@@ -16,7 +16,9 @@ main {
 }
 
 .main--article--item {
-  background: rgba(0, 0, 0, 0.25) url(https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500) no-repeat;
+  background: rgba(0, 0, 0, 0.25)
+    url(https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500)
+    no-repeat;
   background-size: 100% 100%;
   display: block;
   will-change: background-color;
@@ -25,7 +27,9 @@ main {
 }
 
 .main--article--item.first .article-logo {
-  background: transparent url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/cover-gradient.png) no-repeat;
+  background: transparent
+    url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/cover-gradient.png)
+    no-repeat;
   background-position: 0 0;
   background-size: cover;
   position: absolute;
@@ -76,9 +80,21 @@ main {
   color: #b2b2b2;
 }
 
-@media (min-width: 1281px) {
+@media (min-width: 1801px) {
   .main--article--list {
     grid-template-columns: repeat(auto-fill, minmax(800px, 1fr));
+  }
+}
+
+@media (min-width: 1281px) and (max-width: 1800px) {
+  .main--article--list {
+    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  }
+}
+
+@media (min-width: 767px) and (max-width: 1280px) {
+  .main--article--list {
+    grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
   }
 }
 
