--- a/css/news-three.css
+++ b/css/news-three.css
@@ -1,7 +1,7 @@
 .news--three--list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 1rem;
+  grid-gap: 1.4rem;
   margin-bottom: 3rem;
 }
 
@@ -22,7 +22,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background: transparent  url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/image-gradient.png) no-repeat;
+  background: transparent url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/image-gradient.png) no-repeat;
   background-size: 100% 100%;
   z-index: 2;
 }
@@ -98,3 +98,21 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 8px;
 }
+
+/* @media (min-width: 1200px) {
+  .news--three--list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-gap: 1rem;
+    margin-bottom: 3rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .news--three--list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(0px, 1fr));
+    grid-gap: 1rem;
+    margin-bottom: 3rem;
+  }
+} */
