--- a/css/top-article.css
+++ b/css/top-article.css
@@ -76,21 +76,22 @@ main {
   color: #b2b2b2;
 }
 
-@media (min-width: 1801px) {
+@media (min-width: 1601px) {
   .main--article--list {
-    grid-template-columns: repeat(auto-fill, minmax(800px, 1fr));
+    grid-template-columns: 1200px 1fr;
+    height: 600px;
   }
 }
 
-@media (min-width: 1281px) and (max-width: 1800px) {
+@media (min-width: 1101px) and (max-width: 1600px) {
   .main--article--list {
-    grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+    grid-template-columns: 800px 1fr;
   }
 }
 
-@media (min-width: 767px) and (max-width: 1280px) {
+@media (min-width: 767px) and (max-width: 1100px) {
   .main--article--list {
-    grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
+    grid-template-columns: 500px 1fr
   }
 }
 
