--- a/css/top-article.css
+++ b/css/top-article.css
@@ -91,7 +91,7 @@ main {
 
 @media (min-width: 767px) and (max-width: 1100px) {
   .main--article--list {
-    grid-template-columns: 500px 1fr
+    grid-template-columns: 500px 1fr;
   }
 }
 
