--- a/css/news-two.css
+++ b/css/news-two.css
@@ -45,7 +45,7 @@
 
 .news--two--list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1rem;
 }
 
