--- a/css/top-article.css
+++ b/css/top-article.css
@@ -83,15 +83,21 @@ main {
   }
 }
 
-@media (min-width: 1101px) and (max-width: 1600px) {
+@media (min-width: 1201px) and (max-width: 1600px) {
   .main--article--list {
-    grid-template-columns: 800px 1fr;
+    grid-template-columns: 900px 1fr;
   }
 }
 
-@media (min-width: 767px) and (max-width: 1100px) {
+@media (min-width: 999px) and (max-width: 1200px) {
   .main--article--list {
-    grid-template-columns: 500px 1fr;
+    grid-template-columns: 700px 1fr;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 998px) {
+  .main--article--list {
+    grid-template-columns: 580px 1fr;
   }
 }
 
