add css for fixing issues about remove item at tablet size

--- a/css/news-two.css
+++ b/css/news-two.css
@@ -45,7 +45,7 @@
 
 .news--two--list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 1rem;
 }
 
@@ -98,5 +98,15 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .news--two--list .remove {
+    display: none;
+  }
+
+  .news--two--list {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
