--- a/css/index.css
+++ b/css/index.css
@@ -72,6 +72,13 @@ main {
   margin: 1rem 10%;
 }
 
+@media (max-width: 1080px) {
+  .main--body {
+    width: 100%;
+    margin: 1rem 0.4%;
+  }
+}
+
 .news--title {
   font-size: 24px;
   font-weight: 900;
