--- a/css/news-two.css
+++ b/css/news-two.css
@@ -101,7 +101,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1200px) {
   .news--two--list .remove {
     display: none;
   }
